--- a/homework-05.ipynb
+++ b/homework-05.ipynb
@@ -11,25 +11,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 59,
    "id": "b5e823e4-c8b0-4104-8646-5ab64ce5e891",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
-     "execution_count": 38,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import os\n",
     "from dotenv import load_dotenv\n",
-    "load_dotenv()"
+    "load_dotenv()\n",
+    "import os"
    ]
   },
   {
@@ -50,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 60,
    "id": "33503a41-5b87-4b2c-b0c8-6d50f3dbd9c0",
    "metadata": {},
    "outputs": [],
@@ -68,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 61,
    "id": "d73aaae5-c56b-45fb-9a25-a774e885a4d7",
    "metadata": {},
    "outputs": [],
@@ -82,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 63,
    "id": "fe03bf1a-0310-4747-8d2f-2c55f21f6bcc",
    "metadata": {},
    "outputs": [
@@ -92,7 +81,7 @@
        "{'error': {'code': 2008, 'message': 'API key has been disabled.'}}"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -111,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 54,
    "id": "cecc4c79-e5bc-4bd8-9840-bd0f193a47a8",
    "metadata": {},
    "outputs": [
@@ -121,7 +110,7 @@
        "dict_keys(['error'])"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
